VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc1Up.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.1MB][  3%][=>                                                ][4MB/s]  [24MB/455.1MB][  5%][==>                                               ][4.8MB/s]  [32MB/455.1MB][  7%][===>                                              ][5.333MB/s]  [40MB/455.1MB][  8%][====>                                             ][5.714MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][6MB/s]  [56MB/455.1MB][ 12%][======>                                           ][6.222MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][6.4MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][6.545MB/s]  [80MB/455.1MB][ 17%][========>                                         ][6.667MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][6.769MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][7.429MB/s]  [112MB/455.1MB][ 24%][============>                                     ][7.467MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][7.5MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][7.529MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][8MB/s]  [152MB/455.1MB][ 33%][================>                                 ][8MB/s]  [160MB/455.1MB][ 35%][=================>                                ][8MB/s]  [176MB/455.1MB][ 38%][===================>                              ][8.381MB/s]  [184MB/455.1MB][ 40%][====================>                             ][8.364MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][8.696MB/s]  [208MB/455.1MB][ 45%][======================>                           ][8.667MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][8.64MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][8.923MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][8.889MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][8.857MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][9.103MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][9.067MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][9.29MB/s]  [296MB/455.1MB][ 65%][================================>                 ][9.25MB/s]  [312MB/455.1MB][ 68%][==================================>               ][9.455MB/s]  [320MB/455.1MB][ 70%][===================================>              ][9.412MB/s]  [336MB/455.1MB][ 73%][====================================>             ][9.6MB/s]  [352MB/455.1MB][ 77%][======================================>           ][9.778MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][9.73MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][9.895MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][9.846MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][9.8MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][9.756MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][9.905MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][10.05MB/s]  [448MB/455.1MB][ 98%][=================================================>][10.18MB/s]  [455.1MB/455.1MB][100%][==================================================][10.34MB/s]  [455.1MB/455.1MB][100%][==================================================][10.34MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_64395/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_64395/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
